--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="logo">
       <img src="Resources/Thunder.png" alt="" class="logo-img">
-      <a href=""><p>weather.io</p></a>
+      <a href=""><p>SYNC WEATHER</p></a>
     </div>
 
   <div class="menubar">
