--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         <div class="intro">
           <div class="i-logo">
             <img src="Resources/Thunder.png" alt="" class="logoo">
-            <h1 class="heading">Weather.io</h1>
+            <h1 class="heading">SYNC WEATHER</h1>
           </div>
           <p class="description">A Simple and Interactive Weather Forecasting Dasboard.</p>
 
@@ -353,13 +353,13 @@
         <div class="cont">
         <div class="col col1">
           <div class="content">
-          <h1>Pragathish</h1>
-          <p style="font-weight: 600;">Frontend Developer</p>
-          <div><i class="fa-solid fa-envelope" style="margin-right:10px;"></i><span>iampragathish@gmail.com</span></div>
+          <h1>seapia.tech</h1>
+          <p style="font-weight: 600;">sponsor by seapia.tech </p>
+          <div><i class="fa-solid fa-envelope" style="margin-right:10px;"></i><span>seapia.tech</span></div>
           </div>
           <div class="wapi">
-            Powered by <a href="https://www.weatherapi.com/" title="Free Weather API" style="color:#fff;">WeatherAPI.com</a><br>
-            <a href="https://www.weatherapi.com/" title="Free Weather API"><img src='//cdn.weatherapi.com/v4/images/weatherapi_logo.png' alt="Weather data by WeatherAPI.com" border="0"></a>
+            Powered by <a href="https://igntu.ac.in/" title="Free Weather API" style="color:#fff;">IGNTU</a><br>
+            <a href="https://igntu.ac.in/" title="Free Weather API"><img src='//cdn.weatherapi.com/v4/images/weatherapi_logo.png' alt="Weather data by WeatherAPI.com" border="0"></a>
           </div>
         </div>
 
@@ -368,8 +368,8 @@
           <ul>
             <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
             <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/pragathishwaran-v-998352219/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-            <li><a href="https://github.com/pragathish07" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/shailesh-singh-5953441ba" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+            <li><a href="https://github.com/shailesh744" target="_blank"><i class="fa-brands fa-github"></i></a></li>
           </ul>
 
           
