--- a/index.html
+++ b/index.html
@@ -354,12 +354,12 @@
         <div class="col col1">
           <div class="content">
           <h1>seapia.tech</h1>
-          <p style="font-weight: 600;">sponsor by seapia.tech </p>
+          <p style="font-weight: 600;">sponsor by <a href="https://seapia.tech"></a>seapia.tech </p>
           <div><i class="fa-solid fa-envelope" style="margin-right:10px;"></i><span>seapia.tech</span></div>
           </div>
           <div class="wapi">
-            Powered by <a href="https://igntu.ac.in/" title="Free Weather API" style="color:#fff;">IGNTU</a><br>
-            <a href="https://igntu.ac.in/" title="Free Weather API"><img src='//cdn.weatherapi.com/v4/images/weatherapi_logo.png' alt="Weather data by WeatherAPI.com" border="0"></a>
+            Powered by <a href="https://seapia.tech/" title="Free Weather API" style="color:#fff;">seapia</a><br>
+            <a href="https://seapia.tech/" title="Free Weather API"><img src='//cdn.weatherapi.com/v4/images/weatherapi_logo.png' alt="Weather data by WeatherAPI.com" border="0"></a>
           </div>
         </div>
 
